--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.4.0",
     "immer": "^10.0.2",
+    "qs": "^6.11.2",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
