--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
+    "reselect": "^4.1.8",
     "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.0"
   },
